# OmniPacker

./: .npmrc  BUILD.md  README.md  package-lock.json  package.json
scripts/: build-linux-arm.sh  build-linux-arm64.sh  build-linux-x64.sh  build-macos-arm64.sh  build-macos-x64.sh  build-windows-arm64.ps1  build-windows-x64.ps1  fix-appimage-icon.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/linux-arm/: 7zz
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acf_generator.rs  appimage_integration.rs  debug_console.rs  depot_runner.rs  job_finalization.rs  job_metadata.rs  job_staging.rs  lib.rs  login_store.rs  main.rs  manifest_preflight.rs  output_conflict.rs  output_dir.rs  steam_api.rs  steamdb_api.rs  template_metadata.rs  template_renderer.rs  template_store.rs  zip_runner.rs
