[package]
name = "omnipacker"
version = "0.1.0"
description = "DepotDownloader Tauri frontend scaffold"
authors = ["OmniPacker Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omnipacker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = ["image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
num_cpus = "1.16"
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
codepage-strings = "1.0.2"
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_Globalization"] }
